--- a/frontend/src/styles/Messages.css
+++ b/frontend/src/styles/Messages.css
@@ -122,7 +122,11 @@
   gap: 10px;
   justify-content: flex-end;
 }
-
+.fiUser{
+  color: #3498db;
+  font-size: 24px;
+  
+}
 .send-btn, .cancel-btn {
   padding: 10px 20px;
   border: none;
@@ -197,12 +201,10 @@
   white-space: nowrap;
   margin-left: 15px;
 }
-
 .message-content {
   color: #495057;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.5;
-  margin: 0;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -228,6 +230,7 @@
   background: #d4edda;
   color: #155724;
 }
+
 
 .message-type.received {
   background: #d1ecf1;
@@ -294,7 +297,10 @@
   }
 
   .message-item {
-    padding: 15px;
+    padding: 10px;
+    margin-bottom: 15px; /* Space between messages */
+    border-radius: 5px;
+    background-color: #f1f1f1;
   }
 
   .message-header {
@@ -346,6 +352,7 @@
 
   .message-sender {
     font-size: 15px;
+    
   }
 
   .message-content {
