--- a/frontend/src/styles/Notifications.css
+++ b/frontend/src/styles/Notifications.css
@@ -22,6 +22,11 @@
   font-size: 16px;
   margin: 0;
 }
+.mark-read-btn{
+  background: linear-gradient(135deg, #f093fb, #f5576c);
+  border-radius: 14px;
+
+}
 
 .notifications-tabs {
   display: flex;
@@ -189,7 +194,9 @@
   align-items: flex-start;
   margin-bottom: 15px;
 }
-
+.sender{
+  font-size: 14px;
+}
 .notification-title {
   display: flex;
   align-items: center;
@@ -221,6 +228,10 @@
   flex-shrink: 0;
 }
 
+.notification-message{
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 .notification-meta {
   display: flex;
   flex-direction: column;
